// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component should render correctly when fullWidth & required props are falsy 1`] = `
.c1 {
  margin: 0px 0px 8px 0px;
  color: #012040;
}

.c7 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  margin: 0px 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  font-size: 16px;
}

.c5.c5.c5 * {
  fill: #012040;
}

.c8 ~ .c6 {
  color: #818A91;
}

.c2 {
  margin: 0px 0px 8px 0px;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  height: 35px;
  min-width: 150px;
  display: inline-block;
}

.c2 ~ .c6 {
  color: #818A91;
}

.c4 {
  position: absolute;
  top: calc(50% - 14px / 2);
  right: 10px;
  cursor: pointer;
  font-size: 14px;
}

.c3 {
  font-size: 14px;
  font-weight: 400;
  color: #012040;
  background-color: #ffffff;
  box-sizing: border-box;
  border: none;
  width: 120%;
  height: 100%;
  cursor: pointer;
}

.c3:focus {
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
    >
      Role
    </label>
    <div
      class="c2"
    >
      <select
        class="c3"
        label="Role"
      >
        <option
          value="0"
        >
          Admin
        </option>
        <option
          value="1"
        >
          Pharmacist
        </option>
        <option
          value="2"
        >
          Covered Entity
        </option>
      </select>
      <svg
        class="c4 c5"
        height="1em"
        viewBox="0 0 10 12"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="#012040"
          fill-rule="evenodd"
        >
          <path
            d="M0 7l5 5 5-5zM10 5L5 0 0 5z"
          />
        </g>
      </svg>
    </div>
    <span
      class="c6 c7"
    >
      We will never share your email with anyone
    </span>
  </div>
</div>
`;

exports[`Select component should render correctly when label and description are not given 1`] = `
.c0 {
  margin: 0px 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  font-size: 16px;
}

.c4.c4.c4 * {
  fill: #012040;
}

.c1 {
  margin: 0px 0px 0px 8px;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  height: 35px;
  min-width: 150px;
  display: inline-block;
}

.c3 {
  position: absolute;
  top: calc(50% - 14px / 2);
  right: 10px;
  cursor: pointer;
  font-size: 14px;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  color: #012040;
  background-color: #ffffff;
  box-sizing: border-box;
  border: none;
  width: 120%;
  height: 100%;
  cursor: pointer;
}

.c2:focus {
  outline: none;
}

<div>
  <div
    class="c0"
  >
    
    <div
      class="c1"
    >
      <select
        class="c2"
        label=""
      >
        <option
          value="0"
        >
          Admin
        </option>
        <option
          value="1"
        >
          Pharmacist
        </option>
        <option
          value="2"
        >
          Covered Entity
        </option>
      </select>
      <svg
        class="c3 c4"
        height="1em"
        viewBox="0 0 10 12"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="#012040"
          fill-rule="evenodd"
        >
          <path
            d="M0 7l5 5 5-5zM10 5L5 0 0 5z"
          />
        </g>
      </svg>
    </div>
    
  </div>
</div>
`;

exports[`Select component should render correctly with all the props given 1`] = `
.c1 {
  margin: 8px 0px 0px 0px;
  color: #012040;
}

.c1::after {
  color: red;
  content: ' *';
}

.c7 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  margin: 8px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c5 {
  font-size: 16px;
}

.c5.c5.c5 * {
  fill: #012040;
}

.c2 {
  margin: 8px 0px 0px 0px;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  height: 35px;
  min-width: 150px;
  display: inline-block;
  width: 100%;
}

.c2 ~ .c6 {
  color: #818A91;
}

.c4 {
  position: absolute;
  top: calc(50% - 14px / 2);
  right: 10px;
  cursor: pointer;
  font-size: 14px;
}

.c3 {
  font-size: 14px;
  font-weight: 400;
  color: #012040;
  background-color: #ffffff;
  box-sizing: border-box;
  border: none;
  width: 120%;
  height: 100%;
  cursor: pointer;
}

.c3:focus {
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      required=""
    >
      Role
    </label>
    <div
      class="c2"
    >
      <select
        class="c3"
        label="Role"
        required=""
      >
        <option
          value="0"
        >
          Admin
        </option>
        <option
          value="1"
        >
          Pharmacist
        </option>
        <option
          value="2"
        >
          Covered Entity
        </option>
      </select>
      <svg
        class="c4 c5"
        height="1em"
        viewBox="0 0 10 12"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="#012040"
          fill-rule="evenodd"
        >
          <path
            d="M0 7l5 5 5-5zM10 5L5 0 0 5z"
          />
        </g>
      </svg>
    </div>
    <span
      class="c6 c7"
    >
      We will never share your email with anyone
    </span>
  </div>
</div>
`;
